add jenkins file

--- a/calendar-yaml-files/jenkins-statefulset.yaml
+++ b/calendar-yaml-files/jenkins-statefulset.yaml
@@ -16,6 +16,9 @@ spec:
       labels:
         app: jenkins-stateful-set
     spec:
+      securityContext:
+        fsGroup: 1000
+        runAsUser: 0
       containers:
         - name: jenkins-stateful-set
           image: docker.io/jenkins/jenkins:2.346.3-jdk11
