--- a/package.json
+++ b/package.json
@@ -8,24 +8,29 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "ts-node ./index.ts"
+    "start": "ts-node ./index.ts",
+    "test": "mocha ./tests/test.spec.js"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.3",
     "@types/client-sessions": "^0.8.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.1.1",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7",
     "@types/randomcolor": "^0.5.6",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "chai": "^4.3.6",
     "client-sessions": "^0.8.0",
     "connect-mongo": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
+    "mocha": "^10.0.0",
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
